--- a/index.html
+++ b/index.html
@@ -124,18 +124,20 @@
     }
 
     .chat-form input[type="text"] {
-      flex-grow: 1;
-      margin-right: 10px;
+    flex-grow: 1;
+    margin-right: 10px;
+    width: 350px; /* Add this line */
     }
 
     .send-button {
-      border: none;
-      background-color: #1D9BF0;
-      cursor: pointer;
-      color: #FFF;
-      font-size: 18px;
-      padding: 5px 10px;
-      border-radius: 5px;
+    border: none;
+    background-color: #1D9BF0;
+    cursor: pointer;
+    color: #FFF;
+    font-size: 18px;
+    padding: 5px; /* Adjust this value if necessary */
+    border-radius: 5px;
+    width: 50px; /* Add this line */
     }
 
     .send-button::before {
@@ -231,7 +233,9 @@
   document.getElementById('loading').style.display = 'flex';
 
   // Send user's message to the backend
-  // change your domain name below; remember to use 'https://' !!
+
+  // MODIFY YOUR OWN DOMAIN'S BACKEND ADDRESS BELOW.
+  // It's always recommended to use "https://" if you've got your domain root certs.
   fetch('https://domain.com/api', {
     method: 'POST',
     headers: {
