--- a/index.html
+++ b/index.html
@@ -235,53 +235,63 @@
       window.scrollTo(0, document.body.scrollHeight); // Scroll to the bottom of the page
     }
 
-    // Event listener for the form submission
-    document.getElementById('form').addEventListener('submit', function (event) {
-      event.preventDefault();
-      const input = document.getElementById('input').value;
+// Event listener for the form submission
+document.getElementById('form').addEventListener('submit', function (event) {
+  event.preventDefault();
+  const inputField = document.getElementById('input');
+  const input = inputField.value.trim(); // trim leading and trailing white spaces
 
-      // Display user's message
-      createChatMessage('käyttäjä', input);
+  // Check if the input is not empty
+  if (input !== '') {
+    // Disable the input field
+    inputField.disabled = true;
 
-      // Show loading animation
-      document.getElementById('loading').style.display = 'flex';
+    // Display user's message
+    createChatMessage('käyttäjä', input);
 
-      // Send user's message to the backend
+    // Show loading animation
+    document.getElementById('loading').style.display = 'flex';
 
-      // MODIFY YOUR OWN DOMAIN'S BACKEND ADDRESS BELOW.
-      // It's always recommended to use "https://" if you've got your domain root certs.
-      fetch('https://<yourdomainname>/api', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-        },
-        body: JSON.stringify({ input: input }),
+    // Send user's message to the backend
+    fetch('https://<YOUR_DOMAIN_HERE>/api', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json',
+      },
+      body: JSON.stringify({ input: input }),
+    })
+      .then(response => response.json())
+      .then(data => {
+        // Hide loading animation
+        document.getElementById('loading').style.display = 'none';
+
+        // Show response loading text
+        document.getElementById('response-loading').style.display = 'block';
+
+        // Delay displaying bot's response for demonstration purposes
+        setTimeout(() => {
+          // Hide response loading text
+          document.getElementById('response-loading').style.display = 'none';
+
+          // Display bot's response
+          createChatMessage('AI', data.output);
+
+          // Enable the input field
+          inputField.disabled = false;
+        }, 1500);
       })
-        .then(response => response.json())
-        .then(data => {
-          // Hide loading animation
-          document.getElementById('loading').style.display = 'none';
+      .catch(error => {
+        console.error('Error:', error);
 
-          // Show response loading text
-          document.getElementById('response-loading').style.display = 'block';
+        // Enable the input field in case of error
+        inputField.disabled = false;
+      });
 
-          // Delay displaying bot's response for demonstration purposes
-          setTimeout(() => {
-            // Hide response loading text
-            document.getElementById('response-loading').style.display = 'none';
-
-            // Display bot's response
-            createChatMessage('AI', data.output);
-          }, 1500);
-        })
-        .catch(error => {
-          console.error('Error:', error);
-        });
-
-      // Clear the input field
-      document.getElementById('input').value = '';
-    });
-  </script>
+    // Clear the input field
+    inputField.value = '';
+  }
+});
+</script>
 
   <footer style="margin-top: 20px; text-align: center; padding: 10px; background-color: #162D44; color: #fff;">
     <p>© 2023 ChatKeke. All rights reserved.</p>
