scaling on mobile devices / small fix

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ document.getElementById('form').addEventListener('submit', function (event) {
     document.getElementById('loading').style.display = 'flex';
 
     // Send user's message to the backend
-    fetch('https://<YOUR_DOMAIN>/api', {
+    fetch('https://<YOUR_DOMAIN_NAME>/api', {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json',
