--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     .chat-container {
       padding: 10px;
       width: 90%;
-      max-width: 320px;
+      max-width: 298px;
       margin: 20px auto; /* Add margin property */
       max-height: calc(100vh - 40px); /* Adjust max-height property */
       overflow-y: auto; /* Change overflow-y property to auto */
@@ -231,7 +231,7 @@
 
   <h1 class="title">ChatKeke</h1>
 
-  <div style="width: 300px;">
+  <div style="width: 299px;">
     <div id="chat-messages">
       <!-- Chat messages content -->
     </div>
@@ -250,7 +250,7 @@
     </form>
   </div>
   
-  <div id="response-loading" style="width: 320x; display: none; text-align: center; margin-bottom: 10px;">
+  <div id="response-loading" style="width: 300x; display: none; text-align: center; margin-bottom: 10px;">
     <!-- Response loading animation remains unchanged -->
     <div class="dot"></div>
     <div class="dot"></div>
@@ -301,7 +301,7 @@ document.getElementById('form').addEventListener('submit', function (event) {
     document.getElementById('loading').style.display = 'flex';
 
     // Send user's message to the backend
-    fetch('https://<YOUR_DOMAIN_NAME>/api', {
+    fetch('https://<DOMAIN_NAME>/api', {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json',
